# pareto-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  TODO.md  pyproject.toml  pytest.ini
.github/workflows/: check-architecture-diagram.yml  ci.yml
configs/: example.yaml  live_bench.yaml  qwen3-5-9b-vs-27b.yaml  terminal_bench.yaml
docs/: architecture.mmd  architecture.txt
docs/superpowers/plans/: 2026-03-15-pareto-llm-benchmark.md  2026-03-20-repo-mermaid-diagram.md  2026-03-21-livebench.md  2026-03-21-terminal-bench.md
docs/superpowers/specs/: 2026-03-21-livebench-design.md  2026-03-21-terminal-bench-design.md
scripts/: check_diagram.sh  init_env.py  patch_cuda_math.py  setup.sh
src/pareto_llm/: _env.py  cli.py  config.py  runner.py
src/pareto_llm/backend/: __init__.py  base.py  llamacpp_backend.py  mlx_backend.py
src/pareto_llm/benchmarks/: __init__.py  base.py  context_length.py  live_bench.py  terminal_bench.py
src/pareto_llm/metrics/: __init__.py  system.py
src/pareto_llm/storage/: __init__.py  csv_writer.py
tests/: conftest.py  test_backend_serve.py  test_benchmarks.py  test_config.py  test_env.py  test_live_bench.py  test_llamacpp_backend.py  test_metrics.py  test_mlx_backend.py  test_runner.py  test_storage.py  test_terminal_bench.py
