[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareto-llm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.20"]
cuda = [
    "llama-cpp-python>=0.2",
    "pynvml>=11.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pareto-llm = "pareto_llm.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pareto_llm"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
